--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.2",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
